--- a/index.html
+++ b/index.html
@@ -29,10 +29,28 @@
 
   <div id="step01" style="height: 100%;" class="animate__animated animate__fadeInUp">
     <div class="flexCustom step01">
-      <div class="step01__content flexCustom gap-4">
-        <img src="./assets/images/img-step01.svg" alt="" style="display: block;">
+      <div class="step01__content flexCustom gap-4" id="desc01">
+        <img src="./assets/images/img-step01.svg" alt="">
         <h1 style="color: #FF800B">Best Prices & Deals</h1>
         <p class="poppins-regular" style="color: #595959">Find your favorite Meals at the best prices with exclusive deals only on aliments app.</p>
+      </div>
+
+      <div class="step01__content flexCustom gap-4" id="desc02">
+        <img src="./assets/images/step02.svg" alt="">
+        <h1 style="color: #FF800B">Track your Orders</h1>
+        <p class="poppins-regular" style="color: #595959">Track your orders in realtime from the app</p>
+      </div>
+
+      <div class="step01__content flexCustom gap-4" id="desc03">
+        <img src="./assets/images/step03.svg" alt="">
+        <h1 style="color: #FF800B">Free and Fast Delivery</h1>
+        <p class="poppins-regular" style="color: #595959">Free and fast delivery for all meals above ₹100.</p>
+      </div>
+
+      <div style="flex-direction: row; margin-top: 64px;" class="flexCustom gap-4">
+        <span class="dot active" onclick="app.hideItens('desc01', 'dot1')" id="dot1"></span>
+        <span class="dot" onclick="app.hideItens('desc02', 'dot2')" id="dot2"></span>
+        <span class="dot" onclick="app.hideItens('desc03', 'dot3')" id="dot3"></span>
       </div>
     </div>
 
