--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
   <div id="step01" style="height: 100%;" class="animate__animated animate__fadeInUp">
     <div class="flexCustom step01">
       <div class="step01__content flexCustom gap-4" id="desc01">
-        <img src="./assets/images/img-step01.svg" alt="">
+        <img src="./assets/images/img-step01.svg" alt="" width="200">
         <h1 style="color: #FF800B">Best Prices & Deals</h1>
         <p class="poppins-regular" style="color: #595959">Find your favorite Meals at the best prices with exclusive deals only on aliments app.</p>
       </div>
 
       <div class="step01__content flexCustom gap-4" id="desc02">
-        <img src="./assets/images/step02.svg" alt="">
+        <img src="./assets/images/step02.svg" alt="" width="200">
         <h1 style="color: #FF800B">Track your Orders</h1>
         <p class="poppins-regular" style="color: #595959">Track your orders in realtime from the app</p>
       </div>
 
       <div class="step01__content flexCustom gap-4" id="desc03">
-        <img src="./assets/images/step03.svg" alt="">
+        <img src="./assets/images/step03.svg" alt="" width="200">
         <h1 style="color: #FF800B">Free and Fast Delivery</h1>
         <p class="poppins-regular" style="color: #595959">Free and fast delivery for all meals above ₹100.</p>
       </div>
@@ -54,7 +54,7 @@
       </div>
     </div>
 
-    <div class="flexCustom" style="height: 20%;">
+    <div class="flexCustom" style="height: 25%;">
       <button class="btn-login">
         Login
       </button>
