--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </div>
     </div>
 
-    <div class="flexCustom" style="min-height: 100%;">
+    <div class="flexCustom">
       <button class="btn-login">
         Login
       </button>
