--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </div>
     </div>
 
-    <div class="flexCustom">
+    <div class="flexCustom gap-4">
       <button class="btn-login">
         Login
       </button>
